--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="public/style.css">
+    <link rel="stylesheet" href="dist/style.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@fortawesome/fontawesome-free@5.15.3/css/fontawesome.min.css">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.3/css/all.css" integrity="sha384-SZXxX4whJ79/gErwcOYf+zWLeJdY/qpuqC4cAa9rOGUstPomtqpuNWT9wdPEn2fk" crossorigin="anonymous">
 </head>
@@ -31,7 +31,7 @@
                 <button class="mobile-menu-button">
                     <svg class="w-6 h-6" xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" fill="none" viewBox="0 0 24 24" stroke="currentColor">
                         <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4 6h16M4 12h16M4 18h16" />
-                    </svg>
+                    </svg>  
                 </button>
             </div>
 
@@ -52,7 +52,7 @@
             <p class="w-96 text-sm mt-3 text-white font-medium lg:text-lg lg:font-normal">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Voluptate consequatur soluta sapiente ab deleniti in fugit veniam aliquam ea quas. </p>
             <button class="text-center rounded-full bg-gray-700 my-4 w-28 px-2 py-2 mx-auto md:mx-0 lg:py-3 px-4">Shop Now</button>
         </div>
-        <img src="public/img/karsten-winegeart-T7Hxkhv23yY-unsplash.jpg" alt="" class="absolute h-screen min-w-full object-cover object-center z-10">
+        <img src="dist/img/karsten-winegeart-T7Hxkhv23yY-unsplash.jpg" alt="" class="absolute h-screen min-w-full object-cover object-center z-10">
 
     </div>
 
@@ -66,7 +66,7 @@
         <div class="grid sm:grid-cols-1 px-2 py-10 md:grid-cols-2 px-10 lg:grid-cols-3 grid-rows-2 gap-5 max-w-full my-10 px-1 xl:grid-cols-4 xl:gap-7 ">
             <div class="bg-gray-100 rounded  w-64 mx-auto md:w-full">
                 <div class="overflow-hidden">
-                    <img src="./public/img/Honden.png" alt="" class="h-72 max-w-full object-cover object-center sm:object-cover object-center">
+                    <img src="./dist/img/Honden.png" alt="" class="h-72 max-w-full object-cover object-center sm:object-cover object-center">
                 </div>
                 <h3 class="text-center font-bold text-gray-700 ">Price: $50</h3>
                 <div class="flex items-center px-8 py-5 lg:px-4">
@@ -75,7 +75,7 @@
             </div>
             <div class="bg-gray-100 rounded w-64 mx-auto md:w-full">
                 <div class="overflow-hidden">
-                    <img src="./public/img/large_whiskas-dry-food-adult-with-ocean-fish-1-2-kg-636246585998801981.png" alt="" class="h-72 w-full object-cover object-center ">
+                    <img src="./dist/img/large_whiskas-dry-food-adult-with-ocean-fish-1-2-kg-636246585998801981.png" alt="" class="h-72 w-full object-cover object-center ">
                 </div>
                 <h3 class="text-center font-bold text-gray-700 ">Price: $50</h3>
                 <div class="flex items-center px-8 py-5 lg:px-4">
@@ -84,7 +84,7 @@
             </div>
             <div class="bg-gray-100 rounded  w-64 mx-auto md:w-full">
                 <div class="overflow-hidden">
-                    <img src="./public/img/KC-4426_Kitten-Mousse-375x400.png" alt="" class="h-72 w-full object-cover object-center sm:object-cover object-center">
+                    <img src="./dist/img/KC-4426_Kitten-Mousse-375x400.png" alt="" class="h-72 w-full object-cover object-center sm:object-cover object-center">
                 </div>
                 <h3 class="text-center font-bold text-gray-700 ">Price: $50</h3>
                 <div class="flex items-center px-8 py-5 lg:px-4">
@@ -93,7 +93,7 @@
             </div>
             <div class="bg-gray-100 rounded w-64 mx-auto md:w-full">
                 <div class="overflow-hidden">
-                    <img src="./public/img/Honden.png" alt="" class="h-72 w-full object-cover">
+                    <img src="./dist/img/Honden.png" alt="" class="h-72 w-full object-cover">
                 </div>
                 <h3 class="text-center font-bold text-gray-700 ">Price: $50</h3>
                 <div class="flex items-center px-8 py-5 lg:px-4">
@@ -102,7 +102,7 @@
             </div>
             <div class="bg-gray-100 rounded w-64 mx-auto md:w-full">
                 <div class="overflow-hidden">
-                    <img src="./public/img/large_whiskas-dry-food-adult-with-ocean-fish-1-2-kg-636246585998801981.png" alt="" class="h-72 w-full object-cover object-center">
+                    <img src="./dist/img/large_whiskas-dry-food-adult-with-ocean-fish-1-2-kg-636246585998801981.png" alt="" class="h-72 w-full object-cover object-center">
                 </div>
                 <h3 class="text-center font-bold text-gray-700 ">Price: $50</h3>
                 <div class="flex items-center px-8 py-5 lg:px-4">
@@ -111,7 +111,7 @@
             </div>
             <div class="bg-gray-100 rounded w-64 mx-auto md:w-full">
                 <div class="overflow-hidden">
-                    <img src="./public/img/KC-4426_Kitten-Mousse-375x400.png" alt="" class="h-72 w-full object-cover object-center">
+                    <img src="./dist/img/KC-4426_Kitten-Mousse-375x400.png" alt="" class="h-72 w-full object-cover object-center">
                 </div>
                 <h3 class="text-center font-bold text-gray-700 ">Price: $50</h3>
                 <div class="flex items-center px-8 py-5 lg:px-4">
@@ -127,7 +127,7 @@
 <!-- ABOUT PETMART -->
     <div class="container px-10 h-4/5 md:grid-cols-2 grid-rows-1 mx-auto lg:grid grid-cols-2 grid-rows-1">
         <div class="flex justify-center items-center md:col-span-2 lg:col-span-1">
-             <img src="./public/img/karsten-winegeart-NE0XGVKTmcA-unsplash.jpg" alt="" class="object-cover object-center rounded-full md:h-6/12 w-6/12">
+             <img src="./dist/img/karsten-winegeart-NE0XGVKTmcA-unsplash.jpg" alt="" class="object-cover object-center rounded-full md:h-6/12 w-6/12">
          </div>
         <div class=" min-w-full flex items-start flex-col mt-10 mx-auto md:col-span-2 lg:col-span-1 lg:px-2">
             <a href="" class="text-3xl md:text-4xl font-bold"><span>PET</span><span class="text-yellow-400">MART</span></a>
