--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
 
     <!-- PRODCUTS -->
     <div class="max-w-full my-20 text-center px-10 sm:px-20 ">
-        <h1 class="font-bold text-xl space-x-1 text-gray-500 md:text-3xl lg:text-4xl"><span class="text-yellow-400 font-bold">Pet</span><span class="text-secondary font-bold">Mart</span> Products</h1>
+        <h1 class="font-bold text-xl space-x-1 text-gray-500 md:text-3xl lg:text-4xl"><span class="text-primary font-bold">Pet</span><span class="text-secondary font-bold">Mart</span> Products</h1>
         <div class="w-48 h-1 mx-auto bg-gray-400 my-1"></div>
         <div class="max-w-full my-16 md:grid grid-cols-2 gap-x-5 md:grid-cols-3 lg:grid-cols-4">
             <div class="max-w-full rounded-3xl my-3">
